Now with more ASCII art

--- a/index.html
+++ b/index.html
@@ -5,6 +5,33 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>TibiaLottery</title>
 
+<!--
+
+   :@@@@@@@@@@@@@@:
+ .@@++++++++++++++@@.
+ @,                ,@
+:@              .   @:      TibiaLottery v2!
+@+  @@@        @@@  +@      Now with more ASCII art.
+@+  @@@.      ,@@@  +@
+@+  @@@        @@@  +@
+@+   ;          `   +@
+@+                  +@      Hey, what are you doing here? Everything here except this page is minified! BUT TibiaLotery v2 front-end is open source at:
+@+        @@        +@      https://github.com/TibiaLottery/tibialottery.github.io
+@+       @@@@       +@      In fact, that repository is hosting this site.
+@+       @@@@       +@
+@+        @@        +@
+@+                  +@      The backend code is powered by AWS Lambda and is not open source currently, sorry about that.
+@+              :   +@
+@+  @@@        @@@  +@
+@+  @@@+       @@@: +@      This site was made by Shane King using Bootstrap and Angular with a node-powered AWS Lambda backend.
+@+  @@@`       @@@  +@      I'm still learning a lot, so please don't mock my code too hard. Feel free to make pull requests if you want, though.
+:@   .              @:
+ @,                ,@
+ .@@++++++++++++++@@.
+   :@@@@@@@@@@@@@@:
+
+-->
+
 	<link href="/build/bower/font-awesome/css/font-awesome.min.css" rel="stylesheet">
     <link href="/build/bower/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet">
     <link href="/build/bower/angular-material/angular-material.css" rel="stylesheet">
