Made the account information partial not need to hit the AWS endpoint

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 				<li data-ng-class="{active: $state.includes('account.register')}"><a data-ui-sref="account.register" data-ng-bind="'Register'"></a></li>
 			</ul>
 			<ul class="nav navbar-nav navbar-right" ng-if="uipCtrl.loading === false && uipCtrl.loggedIn === true">
-				<li data-ng-class="{active: $state.includes('account')}"><a data-ui-sref="account"><i class='fa fa-user'></i> {{uipCtrl.user.Name}}</a></li>
+				<li data-ng-class="{active: $state.includes('account')}"><a data-ui-sref="account"><i class='fa fa-user'></i> {{uipCtrl.user.name}}</a></li>
 			</ul>
 		</div>
     </div>
