--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1" />
     <title>TibiaLottery</title>
+    <link rel="shortcut icon" href="http://tibialottery.com/images/dice_content.png" type="image/png" />
 
 <!--
 
